k8s/backend-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: backend
  namespace: notes-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:

      containers:

      - name: backend

        image: surajkb2005/notes-backend:latest

        imagePullPolicy: Always

        ports:

        - containerPort: 5000
