k8s/frontend-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: frontend-service
  namespace: notes-app

spec:

  selector:
    app: frontend

  ports:

  - port: 80

    targetPort: 80

  type: ClusterIP
